--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <p>
-        Harshit Raj
-    </p>
 
-    <h1>HARSHU</h1>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>TIME WEB APP</title>
+
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <div id="content">
+    <h1 id="">Current Time Is <h1 style=" color: white;"> "</h1>
+      <h1 style="background-color: black; color: white; padding-left: 10px; padding-right: 10px;" id="header">""</h1>
+    </h1>
+  </div>
+
+  <script src="Practise1.js"></script>
 </body>
+
 </html>
